# serverless-langchain-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  docker-compose.yml  pyproject.toml
agent/: agent.py  app.py  dependencies.py  routes.py  schemas.py
iac/: app.py  stack.py
scripts/: create_ssm_parameter.py
