[project]
name = "serverless-langchain-agent"
version = "0.1.0"
description = "A serverless LangChain agent built with AWS CDK and FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.227.0",
    "boto3>=1.41.2",
    "fastapi>=0.121.3",
    "langchain[openai]>=1.0.8",
    "langgraph-dynamodb-checkpoint>=0.2.6.4",
    "uvicorn>=0.38.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "ruff>=0.14.6",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
build = "docker compose build"
start = "docker compose up -d"
restart = "docker compose up --build -d"
down = "docker compose down"
logs = "docker compose logs -f"
dev = "docker compose watch"
setup-ssm = "python scripts/create_ssm_parameter.py"
deploy = "cdk deploy --require-approval never"
